@startuml

title __ACTORS's Class Diagram__\n

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace actors {
      abstract class nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor {
          # dead : boolean
          # frame : int
          # xpos : int
          # ypos : int
          - images : HashMap<String, BufferedImage>
          - xposPrev : int
          - yposPrev : int
          + Actor()
          + die()
          {abstract} + getImage()
          + getMaze()
          + getPrevX()
          + getPrevY()
          + getX()
          + getY()
          + isDead()
          + isOn()
          + isPlayer()
          + move()
          + moveDown()
          + moveLeft()
          + moveRight()
          + moveTo()
          + moveUp()
          + nextFrame()
          + setup()
          {abstract} + toString()
          # getImageProxy()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace actors {
      enum Direction {
        down
        left
        right
        up
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace actors {
      abstract class nz.ac.vuw.ecs.swen225.gp20.maze.actors.AutoActor {
          + AutoActor()
          {abstract} + autoMove()
          + getCurrentDirection()
          {abstract} + getImage()
          # getAdjacentTile()
          # moveForward()
          # turnAround()
          # turnLeft()
          # turnRight()
      }
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.maze {
    namespace actors {
      class nz.ac.vuw.ecs.swen225.gp20.maze.actors.Player {
          - inventory : ArrayList<Item>
          - isSliding : boolean
          - treasures : int
          + Player()
          + getImage()
          + getInventory()
          + isHolding()
          + isSliding()
          + pickup()
          + pickupTreasure()
          + toString()
          + treasuresCollected()
      }
    }
  }
  

  nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor o-- nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor.Direction : currentDirection
  nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor o-- nz.ac.vuw.ecs.swen225.gp20.maze.tiles.Tile : currentTile
  nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor o-- nz.ac.vuw.ecs.swen225.gp20.maze.Maze : maze
  nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor +-down- nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor.Direction
  nz.ac.vuw.ecs.swen225.gp20.maze.actors.AutoActor -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor
  nz.ac.vuw.ecs.swen225.gp20.maze.actors.Player -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.actors.Actor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
